@@ -8,8 +8,10 @@ import ru.yandex.practicum.filmorate.model.dto.FilmDto;
 import ru.yandex.practicum.filmorate.model.entity.Film;
 import ru.yandex.practicum.filmorate.model.mapper.FilmMapper;
 import ru.yandex.practicum.filmorate.storage.FilmStorage;
+import ru.yandex.practicum.filmorate.storage.UserStorage;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -18,6 +20,7 @@ import java.util.List;
 public class FilmService implements FilmServiceInterface {
 
     private final FilmStorage filmStorage;
+    private final UserStorage userStorage;
     private final FilmMapper filmMapper;
 
     @Override
@@ -31,8 +34,7 @@ public class FilmService implements FilmServiceInterface {
     @Override
     public FilmDto update(FilmDto filmDto) {
         log.debug("Обновление фильма: id={}", filmDto.id());
-        filmStorage.findById(filmDto.id())
-                .orElseThrow(() -> new NotFoundException("Фильм с id=" + filmDto.id() + " не найден"));
+        getFilmById(filmDto.id());
         Film film = filmMapper.toEntity(filmDto);
         Film updated = filmStorage.update(film);
         return filmMapper.toDto(updated);
@@ -40,8 +42,7 @@ public class FilmService implements FilmServiceInterface {
 
     @Override
     public FilmDto findById(Integer id) {
-        Film film = filmStorage.findById(id)
-                .orElseThrow(() -> new NotFoundException("Фильм с id=" + id + " не найден"));
+        Film film = getFilmById(id);
         return filmMapper.toDto(film);
     }
 
@@ -50,14 +51,66 @@ public class FilmService implements FilmServiceInterface {
         log.debug("Запрос всех фильмов");
         return filmStorage.findAll().stream()
                 .map(filmMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public void delete(Integer id) {
         log.debug("Удаление фильма: id={}", id);
-        filmStorage.findById(id)
-                .orElseThrow(() -> new NotFoundException("Фильм с id=" + id + " не найден"));
+        getFilmById(id);
         filmStorage.deleteById(id);
+    }
+
+    @Override
+    public void addLike(Integer filmId, Integer userId) {
+        log.debug("Добавление лайка: filmId={}, userId={}", filmId, userId);
+
+        Film film = getFilmById(filmId);
+        getUserById(userId);
+
+        boolean added = film.getLikes().add(userId);
+        if (added) {
+            filmStorage.update(film);
+            log.info("Пользователь {} поставил лайк фильму {}", userId, filmId);
+        } else {
+            log.debug("Пользователь {} уже поставил лайк фильму {}", userId, filmId);
+        }
+    }
+
+    @Override
+    public void removeLike(Integer filmId, Integer userId) {
+        log.debug("Удаление лайка: filmId={}, userId={}", filmId, userId);
+
+        Film film = getFilmById(filmId);
+        getUserById(userId);
+
+        boolean removed = film.getLikes().remove(userId);
+        if (removed) {
+            filmStorage.update(film);
+            log.info("Пользователь {} удалил лайк у фильма {}", userId, filmId);
+        } else {
+            log.warn("Пользователь {} не ставил лайк фильму {}", userId, filmId);
+            throw new NotFoundException("Пользователь не ставил лайк этому фильму");
+        }
+    }
+
+    @Override
+    public List<FilmDto> getPopularFilms(Integer count) {
+        int limit = (count != null && count > 0) ? count : 10;
+        log.debug("Запрос популярных фильмов: count={}", limit);
+
+        return filmStorage.findPopular(limit).stream()
+                .map(filmMapper::toDto)
+                .collect(Collectors.toList());
+    }
+
+    private Film getFilmById(Integer id) {
+        return filmStorage.findById(id)
+                .orElseThrow(() -> new NotFoundException("Фильм с id=" + id + " не найден"));
+    }
+
+    private void getUserById(Integer id) {
+        userStorage.findById(id)
+                .orElseThrow(() -> new NotFoundException("Пользователь с id=" + id + " не найден"));
     }
 }
